# audiopus

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yml  azure-template-unix.yml  azure-template-windows.yml
.github/workflows/: ci.yml  docs.yml
breaking-changes/: help.html  index.html  search-index.js  settings.html  source-files.js
breaking-changes/audiopus/: all.html  enum.Application.html  enum.Bandwidth.html  enum.Bitrate.html  enum.Channels.html  enum.SampleRate.html  enum.Signal.html  fn.version.html  index.html  sidebar-items.js  struct.MutSignals.html
breaking-changes/audiopus/coder/: fn.size.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Encoder.html  trait.GenericCtl.html
breaking-changes/audiopus/error/: enum.Error.html  enum.ErrorCode.html  fn.try_map_opus_error.html  index.html  sidebar-items.js  type.Result.html
breaking-changes/audiopus/packet/: fn.bandwidth.html  fn.nb_channels.html  fn.nb_frames.html  fn.nb_samples.html  fn.samples_per_frame.html  index.html  (+3 more)
master/: crates.js  settings.html  source-files.js
master/audiopus/: all.html  sidebar-items.js
src/: coder.rs  error.rs  lib.rs  packet.rs  repacketizer.rs  softclip.rs
src/coder/: decoder.rs  encoder.rs
stable-changes/: search-index.js  settings.html
stable-changes/audiopus/: all.html  enum.Application.html  enum.Bandwidth.html  enum.Bitrate.html  enum.Channels.html  enum.SampleRate.html  enum.Signal.html  fn.version.html  index.html  sidebar-items.js  struct.MutSignals.html  trait.TryFrom.html  trait.TryInto.html
(+120 files in other folders)
